# vidore-rag

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
index/: meta.json
src/: __init__.py
src/models/: __init__.py  colpali.py
src/rag/: __init__.py  system.py
src/utils/: __init__.py  timer.py
src/vectorstore/: __init__.py  qdrant_store.py
